Did some work on the filters to make them more readable, also fixed a bug with navigation. And I adjusted the 'no results left' message on the results page.

--- a/client/openstorefront/app/styles/results/default.scss
+++ b/client/openstorefront/app/styles/results/default.scss
@@ -40,5 +40,5 @@ input[type=checkbox]:checked + label,  input[type=checkbox]:checked + span{
 }
 .panel-title input[type="checkbox"]{
   position: relative;
-  bottom: -4px;
+  bottom: -7px;
 }
