--- a/client/openstorefront/app/styles/results/filters.scss
+++ b/client/openstorefront/app/styles/results/filters.scss
@@ -38,3 +38,8 @@
   padding: 0px 8px !important;
   border: 0px transparent!important;
 }
+
+.filterTable table th {
+  background: #eeeeee;
+  margin-bottom: -1px;
+}
